# dreamerv3

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  example.sh  init.sh  minetest_entrypoint.py  minetest_entrypoint.sh  pyproject.toml
dreamerv3/: Dockerfile  agent.py  configs.yaml  main.py  requirements.txt
embodied/core/: __init__.py  _encode_gif.py  logger.py  logger_mlflow.py  when.py
embodied/envs/: from_gymnasium.py  minetest_gymnasium.py  minetest_wrapper.py  observation_reward_system.py
embodied/run/: train.py  train_eval.py
tools/: minetest_client.py
