[project]
authors = []
dependencies = [
    "numpy~=1.0",
    "cloudpickle",
    "gym>=0.26.2,<0.27",
    "crafter>=1.8.3,<2",
    "tensorflow-probability>=0.24.0,<0.25",
    "optax>=0.2.3,<0.3",
    "jaxlib>=0.4.31,<0.5",
    "jax[cuda12-pip]>=0.4.31,<0.5",
    "einops>=0.8.0,<0.9",
    "chex>=0.1.86,<0.2",
    "colored>=2.2.4,<3",
    "gputil>=1.4.0,<2",
    "msgpack>=1.0.8,<2",
    "psutil>=6.0.0,<7",
    "ruamel-yaml>=0.18.6,<0.19",
    "tensorflow-cpu>=2.17.0,<3",
    "zmq>=0.0.0,<0.0.1",
]
description = "Add a short description here"
name = "dreamerv3"
requires-python = "~= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "https://repo.prefix.dev/obelisk"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dreamerv3 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
gymnasium = ">=0.29.1,<0.30"
minetest-boad = ">=0.12,<1"
minetest-gymnasium = { version = ">=0.16,<1", channel = "https://repo.prefix.dev/obelisk" }
